tests/baselines/reference/typeFromPropertyAssignment10.errors.txt
main.js(6,1): error TS2454: Variable 'x' is used before being assigned.


==== module.js (0 errors) ====
    var Outer = Outer || {};
    Outer.app = Outer.app || {};
    
==== someview.js (0 errors) ====
    Outer.app.SomeView = (function () {
        var SomeView = function() {
            var me = this;
        }
        return SomeView;
    })();
    Outer.app.Inner = class {
        constructor() {
            /** @type {number} */
            this.y = 12;
        }
    }
    var example = new Outer.app.Inner();
    example.y;
    /** @param {number} k */
    Outer.app.statische = function (k) {
        return k ** k;
    }
==== application.js (0 errors) ====
    Outer.app.Application = (function () {
    
        /**
         * Application main class.
         * Will be instantiated & initialized by HTML page
         */
        var Application = function () {
            var me = this;
            me.view = new Outer.app.SomeView();
        };
        return Application;
    })();
==== main.js (1 errors) ====
    var app = new Outer.app.Application();
    var inner = new Outer.app.Inner();
    inner.y;
    /** @type {Outer.app.Inner} */
    var x;
    x.y;
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    Outer.app.statische(101); // Infinity, duh
    